# pysentence-similarity

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: package.yml
pysentence_similarity/: __init__.py  _model.py  _splitter.py  _storage.py  _support_models.py  _version.py  compute.py  pooling.py  utils.py  version.py
pysentence_similarity/utils/: __init__.py  _compute_score.py  _search_similar.py
tests/: test_compute.py  test_model.py  test_splitter.py  test_storage.py  test_utils.py
