[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysentence-similarity"
version = "1.0.1"
description = "PySentence-Similarity is a tool designed to identify and find similarities between sentences and a base sentence, expressed as a percentage."
authors = [
    { name = "goldpulpy", email = "sawsani1928@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tokenizers",
    "onnxruntime-gpu",
    "beautifulsoup4",
    "platformdirs",
    "h5py"
]
keywords = ["sentence similarity", "NLP", "natural language processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]


[project.urls]
Homepage = "https://github.com/goldpulpy/pysentence-similarity"
Repository = "https://github.com/goldpulpy/pysentence-similarity"
Documentation = "https://github.com/goldpulpy/pysentence-similarity#readme"
Issue = "https://github.com/goldpulpy/pysentence-similarity/issues"

